# AzureEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Azur/: Azur.h  CMakeLists.txt  azphc.cpp  azphc.h
Azur/Azur/: Application.cpp  Application.h  Core.h
Azur/Azur/Core/: Application.cpp  Application.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  MouseCodes.h
Azur/Azur/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Azur/Azur/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Azur/Azur/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Azur/Azur/Log/: AzurLog.cpp  AzurLog.h
Azur/Azur/Window/: Window.h
Azur/Azur/Window/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Azure/: Azur.h  Azure.h  CMakeLists.txt  azpch.cpp  azpch.h  azphc.h
Azure/Azure/: Core.h
Azure/Azure/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Azure/Azure/Core/: AActor.cpp  AActor.h  Application.cpp  Application.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  MouseCodes.h  Time.h
Azure/Azure/Editor/: EditorLayer.cpp  EditorLayer.h
Azure/Azure/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Azure/Azure/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Azure/Azure/Log/: AzurLog.cpp  AzurLog.h  AzureLog.cpp  AzureLog.h
Azure/Azure/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Azure/Azure/Styles/: AzureStyle.cpp  AzureStyle.h
Azure/Azure/Window/: Window.cpp  Window.h
Azure/Azure/Window/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Azure/Platform/Common/: SDLWindow.cpp  SDLWindow.h
Azure/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Azure/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Content/Materials/: Texture.glsl
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.h  main.cpp
